lab1/Test/L1-A-13-32.output
Error Type B at Line 2
Error Type B at Line 4
Error Type B at Line 11
Error Type B at Line 16
Error Type B at Line 19
Error Type B at Line 35
Error Type B at Line 37
Error Type B at Line 37
Error Type B at Line 38
Error Type A at Line 42
