lab1/Test/L1-A-13-32.cmm
int tbg ( ) {
}. 
struct Ydt_nqmCpWMW9sozv NFCdubfegdwHSi [ 1773031655 
  ] , RZcWtfMPUXl9z struct 

;
int ;
int ;
int ;
float ;
if int taA3G8u_ZrQpi1h 
;
struct {
  struct gtZ {
    struct {
    }xDlBPFNGky , , fgrTYf ;
  }SMDSVvoOznoX72ZQS = uZN0INezJx8 = r9q16tKOleSEM5 
    == lYM86K0lEC8LE + q8F * - ! KvfHJo [ vRqDG || ZLF 
    && EOcvtyIIR1p_vGFh ( = N3PPzaVQ <= ( c35QHG1QmqV 
    && TNBa7IlpK8LZIWLMoQ3 < - - ( vbcdtONglmYSr || vl1XZnH1 
    > hflBzwaQ / ( MpE8JiYWLU23vJpkVz3 = pwWlBlE >= gRgAjTqPBJ2E0OsaV8y 
    - ( fsjsX5OUR3pnMJsDH0 && Jk != - ( k2aXhN_E_bP = 
    D5Nq0bkT && ( G7jRi [ BlSI90nR3yhU9gTLTKVM - ( ( LcbM7DzQJfLSS 
    > k9G + ( LTwYghSahC1b && ( HDFaZAf5IJTzLFMx6 + ( 
    uP6KJUAjisVE = Fm5iNZRpfh_4x4N_Q5 <= bxDgrU3c8iHiLqUjJ 
    / ( Qp_ || EHo2nzNNpoH9 < nYlj_jacc5Q8w_qOBYU4 ( sYl4_gs2 
    , hZrR ) ) + DFHzMEB - bbUE8Ke4e / bQ7_N6FX75wUE ) 
    ) != P6neN1T6gwnvEQbeydqy ) . WPw ) == - brxuCYFYpEHl2 
    + ! ! - D3VAkcjT0N8o4 ) / - ! KT6xDJaQ ] . syHInownQpqN 
    == hcC ) ) ) ) ) + nF5v2umJSdusxwQtxBxs * jPZ8ypAB3Ry3VMwcy 
    . GNczj5 * 1948620972.1258147284 ) ) . o0nTwz2ol6hPB 
    / 1446273736 ] - uS69a ( ) ;
}NMZli5c7StG 
;
int F_ ( int wP else , int z7zzwybaVcgc ) {
  if ( mbgsqrcve24PNty ) {
=     if Bnpy1teooEx )     ZtxEpOEK6Kld7U3FTLg ;
else     if Ysp5 )     pbvehZbhk ;


    while ( fAgu )     if ( R7QTEJm8z ) {
    }else '    return fegK014W_WtudYGnB2 ;


  }
  kI3b33uq ;
}
